# FastAPI-Big-Query

./: .flake8  .gitignore  .isort.cfg  .issues  .pre-commit-config.yaml  README.md  json2env.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/apis/api_1/: clients.py  connection.py  modules.py  query.py  sensor_data.py  sensors.py  utils.py
app/apis/big_query/: clients.py  connection.py  modules.py  query.py  sensor_data.py  sensors.py
app/core/: config.py  create_key.py  models.py  view.py
app/routes/: view_clients.py  view_modules.py  view_sensor_data.py  view_sensors.py  views.py
